--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_position_definition_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_position_definition_factory.yml
@@ -58,7 +58,8 @@ services:
       $parentIdField: 'id_category'
       $firstPosition: 1
 
-  PrestaShop\PrestaShop\Core\Grid\Position\PositionDefinition:
+  prestashop.core.grid.feature.position_definition:
+    class: 'PrestaShop\PrestaShop\Core\Grid\Position\PositionDefinition'
     arguments:
       $table: 'feature'
       $idField: 'id_feature'
