--- a/tests/Integration/Behaviour/behat.yml
+++ b/tests/Integration/Behaviour/behat.yml
@@ -571,3 +571,8 @@ default:
           contexts:
             - Tests\Integration\Behaviour\Features\Context\CommonFeatureContext
             - Tests\Integration\Behaviour\Features\Context\Domain\AuthorizationServerFeatureContext
+        alias:
+          paths:
+            - "%paths.base%/Features/Scenario/Search"
+          contexts:
+            - Tests\Integration\Behaviour\Features\Context\Domain\AliasFeatureContext
