--- a/tests/Integration/Behaviour/behat.yml
+++ b/tests/Integration/Behaviour/behat.yml
@@ -576,3 +576,4 @@ default:
             - "%paths.base%/Features/Scenario/Search"
           contexts:
             - Tests\Integration\Behaviour\Features\Context\Domain\AliasFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\CommonFeatureContext
