Added test for menu thumbnail keys

--- a/src/PrestaShopBundle/Resources/config/services/core/category.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/category.yml
@@ -12,4 +12,11 @@ services:
     deprecated: ~
 
   PrestaShop\PrestaShop\Core\Category\Provider\MenuThumbnailAvailableKeyProvider:
-    - !php/const _PS_CAT_IMG_DIR_
+    autowire: true
+    public: false
+
+  PrestaShop\PrestaShop\Core\Category\Provider\CategoryImageFinder:
+    autowire: true
+    public: false
+    arguments:
+      - !php/const _PS_CAT_IMG_DIR_
