--- a/src/PrestaShopBundle/Resources/config/services/adapter/alias.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/alias.yml
@@ -7,20 +7,19 @@ services:
     public: false
 
   PrestaShop\PrestaShop\Adapter\Alias\Repository\AliasRepository:
+    autowire: true
+    public: false
     arguments:
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
       - '@PrestaShop\PrestaShop\Adapter\Alias\Validate\AliasValidator'
 
-
-  PrestaShop\PrestaShop\Adapter\Alias\CommandHandler\AddAliasHandler:
+  PrestaShop\PrestaShop\Adapter\Alias\CommandHandler\AddAlias:
     autowire: true
     public: false
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Alias\Command\AddAliasCommand
-    arguments:
-      [ '@PrestaShop\PrestaShop\Adapter\Alias\Repository\AliasRepository' ]
 
   PrestaShop\PrestaShop\Adapter\Alias\QueryHandler\GetAliasForEditingHandler:
     autowire: true
@@ -28,5 +27,3 @@ services:
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Alias\Query\GetAliasForEditing
-    arguments:
-      [ '@PrestaShop\PrestaShop\Adapter\Alias\Repository\AliasRepository' ]
