--- a/tests/UI/.env.ci
+++ b/tests/UI/.env.ci
@@ -1,7 +1,7 @@
 # .env used for ci
 # URLs
-URL_FO="http://localhost/"
-URL_BO="http://localhost/admin-dev/"
+URL_FO="https://localhost/"
+URL_BO="https://localhost/admin-dev/"
 URL_INSTALL="http://localhost/install-dev/"
 
 # BO account
@@ -13,6 +13,7 @@ LASTNAME="Beier"
 # Install
 INSTALL_LANGUAGE="en"
 INSTALL_COUNTRY="France"
+ENABLE_SSL=true
 DB_SERVER="127.0.0.1"
 DB_NAME="prestashop"
 DB_USER="root"
