Nightly : Support for HTTPS

--- a/tests/UI/.env.ci
+++ b/tests/UI/.env.ci
@@ -1,8 +1,8 @@
 # .env used for ci
 # URLs
-URL_FO="http://localhost/"
-URL_BO="http://localhost/admin-dev/"
-URL_INSTALL="http://localhost/install-dev/"
+URL_FO="https://localhost/"
+URL_BO="https://localhost/admin-dev/"
+URL_INSTALL="https://localhost/install-dev/"
 
 # BO account
 LOGIN="demo@prestashop.com"
