--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -43,6 +43,8 @@ jobs:
       - name: Run tests
         run: npm ci && npm run test:sanity:fast-fail
         working-directory: ./tests/UI
+        env:
+          ENABLE_SSL: true
 
       - uses: actions/upload-artifact@v3
         if: ${{ always() }}
