--- a/src/PrestaShopBundle/Resources/config/services/adapter/form.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/form.yml
@@ -7,9 +7,6 @@ services:
     arguments:
       - '@=service("prestashop.adapter.legacy.context").getLanguage().id'
 
-  prestashop.adapter.form.choice_provider.shop_tree_choice_provider:
-    class: 'PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\ShopTreeChoiceProvider'
-
   prestashop.adapter.form.choice_provider.category_tree_choice_provider:
     class: 'PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\CategoryTreeChoiceProvider'
     arguments:
@@ -101,3 +98,13 @@ services:
       - '@PrestaShop\PrestaShop\Adapter\Attribute\Repository\AttributeRepository'
       - '@PrestaShop\PrestaShop\Core\Product\Combination\NameBuilder\CombinationNameBuilderInterface'
       - '@=service("prestashop.adapter.legacy.context").getLanguage().id'
+
+
+  PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\ShopTreeChoiceProvider:
+    autowire: true
+    public: false
+
+  # deprecated
+  prestashop.adapter.form.choice_provider.shop_tree_choice_provider:
+    alias: PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\ShopTreeChoiceProvider
+    deprecated: ~
