Add errors to ignore in phpstan-baseline.neon

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,6 +1,21 @@
 parameters:
 	ignoreErrors:
 		-
+			message: "#^Class Product is forbidden, No legacy calls inside the prestashop bundle. Please create an interface and an adapter if you need to\\.$#"
+			count: 1
+			path: src/Core/Stock/StockManager.php
+
+		-
+			message: "#^Namespace Product is forbidden, No legacy calls inside the prestashop bundle. Please create an interface and an adapter if you need to\\.$#"
+			count: 1
+			path: src/PrestaShopBundle/Entity/Repository/StockRepository.php
+
+		-
+			message: "#^Class Product is forbidden, No legacy calls inside the prestashop bundle. Please create an interface and an adapter if you need to\\.$#"
+			count: 1
+			path: src/PrestaShopBundle/Entity/Repository/StockRepository.php
+
+		-
 			message: "#^Namespace Context is forbidden, No legacy calls inside the prestashop bundle\\. Please create an interface and an adapter if you need to\\.$#"
 			count: 6
 			path: src/Core/Addon/Module/ModuleManagerBuilder.php
