expand discount filler to CartRuleActionFiller

--- a/src/PrestaShopBundle/Resources/config/services/adapter/cart_rule.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/cart_rule.yml
@@ -60,6 +60,6 @@ services:
     tags:
       - { name: tactician.handler, command: PrestaShop\PrestaShop\Core\Domain\CartRule\Command\EditCartRuleCommand }
 
-  PrestaShop\PrestaShop\Adapter\CartRule\DiscountApplicationFiller:
+  PrestaShop\PrestaShop\Adapter\CartRule\CartRuleActionFiller:
     autowire: true
     public: false
