Add CLI command to list and toggle feature flags

--- a/src/PrestaShopBundle/Resources/config/services/bundle/command.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/command.yml
@@ -59,3 +59,8 @@ services:
       - '@prestashop.adapter.data_provider.language'
     tags:
       - 'console.command'
+
+  PrestaShopBundle\Command\FeatureFlagCommand:
+    autowire: true
+    tags:
+      - 'console.command'
