--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -342,7 +342,6 @@ services:
   PrestaShopBundle\Form\Admin\Sell\Customer\TransferGuestAccountType:
   PrestaShopBundle\Form\Admin\Sell\Customer\CustomerType:
     arguments:
-      $genderChoices: '@=service("prestashop.adapter.form.choice_provider.gender_by_id_choice_provider").getChoices()'
       $groupChoices: '@=service("prestashop.adapter.form.choice_provider.group_by_id_choice_provider").getChoices()'
       $riskChoices: '@=service("prestashop.adapter.form.choice_provider.risk_by_id_choice_provider").getChoices()'
       $isB2bFeatureEnabled: '@=service("prestashop.core.b2b.b2b_feature").isActive()'
@@ -436,6 +435,7 @@ services:
     arguments:
       $eventSubscriber: '@PrestaShopBundle\Form\Admin\Type\EventListener\PriceReductionListener'
 
+  PrestaShopBundle\Form\Admin\Sell\Customer\GenderType:
   PrestaShopBundle\Form\Admin\Sell\Customer\PrivateNoteType:
   PrestaShopBundle\Form\Admin\Sell\Order\InternalNoteType:
   PrestaShopBundle\Form\Admin\Sell\Order\AddOrderCartRuleType:
