--- a/src/PrestaShopBundle/Resources/config/services/core/constraint_validator.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/constraint_validator.yml
@@ -1,70 +1,71 @@
 services:
   _defaults:
-    public: true
+    public: false
+    autowire: true
+    autoconfigure: true
 
-  prestashop.core.constraint_validator.is_url_rewrite_validator:
-    class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\IsUrlRewriteValidator'
+  PrestaShop\PrestaShop\Core\ConstraintValidator\IsUrlRewriteValidator:
+  PrestaShop\PrestaShop\Core\ConstraintValidator\DefaultLanguageValidator:
+  PrestaShop\PrestaShop\Core\ConstraintValidator\CustomerNameValidator:
+  PrestaShop\PrestaShop\Core\ConstraintValidator\TypedRegexValidator:
+  PrestaShop\PrestaShop\Core\ConstraintValidator\CleanHtmlValidator:
+  PrestaShop\PrestaShop\Core\ConstraintValidator\UniqueStateIsoCodeValidator:
+
+  PrestaShop\PrestaShop\Core\ConstraintValidator\ExistingCustomerEmailValidator:
     arguments:
-      - '@prestashop.adapter.legacy.configuration'
-    tags:
-      - { name: validator.constraint_validator }
+      $customerDataSource: '@prestashop.adapter.customer.customer_data_source'
 
-  prestashop.core.constraint_validator.default_language_validator:
-    class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\DefaultLanguageValidator'
+  PrestaShop\PrestaShop\Core\ConstraintValidator\AddressZipCodeValidator:
     arguments:
-      - '@=service("prestashop.adapter.legacy.configuration").get("PS_LANG_DEFAULT")'
-    tags:
-      - { name: validator.constraint_validator }
+      $requirementsProvider: '@prestashop.adapter.country.country_zip_code_requirements_provider'
 
-  prestashop.core.constraint_validator.customer_name_validator:
-    class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\CustomerNameValidator'
-    tags:
-      - { name: validator.constraint_validator }
-
-  prestashop.core.constraint_validator.typed_regex_validator:
-    class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\TypedRegexValidator'
+  PrestaShop\PrestaShop\Core\ConstraintValidator\AddressDniRequiredValidator:
     arguments:
-      - '@prestashop.adapter.legacy.configuration'
-    tags:
-      - { name: validator.constraint_validator }
+      $countryRequiredFieldsProvider: '@prestashop.adapter.country.country_required_fields_provider'
 
-  prestashop.core.constraint_validator.existing_customer_email_validator:
-    class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\ExistingCustomerEmailValidator'
-    arguments:
-      - '@prestashop.adapter.customer.customer_data_source'
-    tags:
-      - { name: validator.constraint_validator }
-
-  prestashop.core.constraint_validator.address_zip_code_validator:
-    class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\AddressZipCodeValidator'
-    arguments:
-      - '@translator'
-      - '@prestashop.adapter.country.country_zip_code_requirements_provider'
-    tags:
-      - { name: validator.constraint_validator }
-
-  prestashop.core.constraint_validator.address_country_dni_validator:
-    class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\AddressDniRequiredValidator'
-    arguments:
-      - '@prestashop.adapter.country.country_required_fields_provider'
-    tags:
-      - { name: validator.constraint_validator }
-
-  prestashop.core.constraint_validator.address_country_state_validator:
+  PrestaShop\PrestaShop\Core\ConstraintValidator\AddressStateRequiredValidator:
     class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\AddressStateRequiredValidator'
     arguments:
-      - '@prestashop.adapter.country.country_required_fields_provider'
-    tags:
-      - { name: validator.constraint_validator }
+      $countryRequiredFieldsProvider: '@prestashop.adapter.country.country_required_fields_provider'
 
+  # deprecated in version 9.0
+  prestashop.core.constraint_validator.is_url_rewrite_validator:
+    alias: 'PrestaShop\PrestaShop\Core\ConstraintValidator\IsUrlRewriteValidator'
+    public: true
+    deprecated: ~
+  prestashop.core.constraint_validator.default_language_validator:
+    alias: 'PrestaShop\PrestaShop\Core\ConstraintValidator\DefaultLanguageValidator'
+    public: true
+    deprecated: ~
+  prestashop.core.constraint_validator.customer_name_validator:
+    alias: 'PrestaShop\PrestaShop\Core\ConstraintValidator\CustomerNameValidator'
+    public: true
+    deprecated: ~
+  prestashop.core.constraint_validator.typed_regex_validator:
+    alias: 'PrestaShop\PrestaShop\Core\ConstraintValidator\TypedRegexValidator'
+    public: true
+    deprecated: ~
+  prestashop.core.constraint_validator.existing_customer_email_validator:
+    alias: 'PrestaShop\PrestaShop\Core\ConstraintValidator\ExistingCustomerEmailValidator'
+    public: true
+    deprecated: ~
+  prestashop.core.constraint_validator.address_zip_code_validator:
+    alias: 'PrestaShop\PrestaShop\Core\ConstraintValidator\AddressZipCodeValidator'
+    public: true
+    deprecated: ~
+  prestashop.core.constraint_validator.address_country_dni_validator:
+    alias: 'PrestaShop\PrestaShop\Core\ConstraintValidator\AddressDniRequiredValidator'
+    public: true
+    deprecated: ~
+  prestashop.core.constraint_validator.address_country_state_validator:
+    alias: 'PrestaShop\PrestaShop\Core\ConstraintValidator\AddressStateRequiredValidator'
+    public: true
+    deprecated: ~
   prestashop.core.constraint_validator.clean_html_validator:
-    class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\CleanHtmlValidator'
-    arguments:
-      - "@=service('prestashop.adapter.legacy.configuration').getBoolean('PS_ALLOW_HTML_IFRAME')"
-    tags:
-      - { name: validator.constraint_validator }
-
+    alias: 'PrestaShop\PrestaShop\Core\ConstraintValidator\CleanHtmlValidator'
+    public: true
+    deprecated: ~
   prestashop.validator.constraint.unique_state_iso_code:
-    class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\UniqueStateIsoCodeValidator'
-    tags:
-      - { name: validator.constraint_validator }
+    alias: 'PrestaShop\PrestaShop\Core\ConstraintValidator\UniqueStateIsoCodeValidator'
+    public: true
+    deprecated: ~
