--- a/src/PrestaShopBundle/Resources/config/services/adapter/data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/data_provider.yml
@@ -10,6 +10,7 @@ services:
     arguments:
       - "@prestashop.categories_provider"
       - "@prestashop.adapter.data_provider.module"
+      - "@prestashop.adapter.shop.context"
       - "@=service('prestashop.adapter.legacy.context').getContext().employee"
     calls:
       - [ setRouter, [ '@router' ] ]
