--- a/src/PrestaShopBundle/Resources/config/services/core/grid/accessibility_checker.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/accessibility_checker.yml
@@ -1,28 +1,35 @@
 services:
   _defaults:
-    public: true
+    autowire: true
+    public: false
 
   prestashop.core.grid.action.row.accessibility_checker.delete_profile:
+    autowire: false
+    public: true
     class: 'PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteProfileAccessibilityChecker'
     arguments:
       - '@=service("prestashop.adapter.legacy.configuration").get("_PS_ADMIN_PROFILE_")'
 
+  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\PrintInvoiceAccessibilityChecker: ~
+  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\PrintDeliverySlipAccessibilityChecker: ~
+  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteOrderReturnStatesAccessibilityChecker: ~
+  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteOrderStatesAccessibilityChecker: ~
+  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\ProductSingleShopAssociatedAccessibilityChecker: ~
+  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\ProductMultipleShopsAssociatedAccessibilityChecker: ~
+
+  # deprecated services
   prestashop.core.grid.action.row.accessibility_checker.print_invoice:
-    class: 'PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\PrintInvoiceAccessibilityChecker'
+    alias: PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\PrintInvoiceAccessibilityChecker
+    deprecated: ~
 
   prestashop.core.grid.action.row.accessibility_checker.print_delivery_slip:
-    class: 'PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\PrintDeliverySlipAccessibilityChecker'
-
-  prestashop.core.grid.action.row.accessibility_checker.delete_order_return_states:
-    class: 'PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteOrderReturnStatesAccessibilityChecker'
+    alias: PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\PrintDeliverySlipAccessibilityChecker
+    deprecated: ~
 
   prestashop.core.grid.action.row.accessibility_checker.delete_order_states:
-    class: 'PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteOrderStatesAccessibilityChecker'
+    alias: PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteOrderStatesAccessibilityChecker
+    deprecated: ~
 
-  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\ProductSingleShopAssociatedAccessibilityChecker:
-    autowire: true
-    public: false
-
-  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\ProductMultipleShopsAssociatedAccessibilityChecker:
-    autowire: true
-    public: false
+  prestashop.core.grid.action.row.accessibility_checker.delete_order_return_states:
+    alias: PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteOrderReturnStatesAccessibilityChecker
+    deprecated: ~
