--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
@@ -161,7 +161,7 @@ services:
   prestashop.core.grid.data.factory.language:
     class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
     arguments:
-      - '@prestashop.core.grid.query_.builder.language'
+      - '@prestashop.core.grid.query.builder.language'
       - '@prestashop.core.hook.dispatcher'
       - '@prestashop.core.grid.query.doctrine_query_parser'
       - 'language'
