--- a/src/PrestaShopBundle/Resources/config/services/adapter/attribute.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/attribute.yml
@@ -1,6 +1,7 @@
 services:
   _defaults:
-    public: true
+    public: false
+    autowire: true
 
   PrestaShop\PrestaShop\Adapter\Attribute\CommandHandler\DeleteAttributeHandler:
     tags:
@@ -18,19 +19,18 @@ services:
       - '%database_prefix%'
 
   PrestaShop\PrestaShop\Adapter\Attribute\CommandHandler\AddAttributeHandler:
-    autowire: true
     tags:
       - name: tactician.handler
-        command: PrestaShop\PrestaShop\Core\Domain\Attribute\Command\AddAttributeCommand
+        command: PrestaShop\PrestaShop\Core\Domain\AttributeGroup\Attribute\Command\AddAttributeCommand
 
   PrestaShop\PrestaShop\Adapter\Attribute\CommandHandler\EditAttributeHandler:
-    autowire: true
     tags:
       - name: tactician.handler
-        command: PrestaShop\PrestaShop\Core\Domain\Attribute\Command\EditAttributeCommand
+        command: PrestaShop\PrestaShop\Core\Domain\AttributeGroup\Attribute\Command\EditAttributeCommand
 
   PrestaShop\PrestaShop\Adapter\Attribute\QueryHandler\GetAttributeForEditingHandler:
-    autowire: true
     tags:
       - name: tactician.handler
-        command: PrestaShop\PrestaShop\Core\Domain\Attribute\Query\GetAttributeForEditing
+        command: PrestaShop\PrestaShop\Core\Domain\AttributeGroup\Attribute\Query\GetAttributeForEditing
+
+  PrestaShop\PrestaShop\Adapter\Attribute\Validate\AttributeValidator:
