fix behat tests

--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -512,7 +512,7 @@ services:
     parent: 'prestashop.core.grid.abstract_query_builder'
     arguments:
       - '@prestashop.core.query.doctrine_search_criteria_applicator'
-    public: false
+    public: true
 
   PrestaShop\PrestaShop\Core\Grid\Query\FeatureQueryBuilder:
     parent: 'prestashop.core.grid.abstract_query_builder'
