--- a/.github/workflows/sanity-productV2-skip.yml
+++ b/.github/workflows/sanity-productV2-skip.yml
@@ -20,7 +20,7 @@ jobs:
     name: Sanity Product V2
     strategy:
       matrix:
-        php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
+        php: ['8.1', '8.2']
       fail-fast: false
     steps:
       - run: 'echo "Not required"'
