--- a/src/PrestaShopBundle/Resources/config/services/core/grid/accessibility_checker.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/accessibility_checker.yml
@@ -3,19 +3,13 @@ services:
     autowire: true
     public: false
 
-  prestashop.core.grid.action.row.accessibility_checker.delete_profile:
-    autowire: false
-    public: true
-    class: 'PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteProfileAccessibilityChecker'
-    arguments:
-      - '@=service("prestashop.adapter.legacy.configuration").get("_PS_ADMIN_PROFILE_")'
+  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\:
+    resource: "%kernel.root_dir%/../src/Core/Grid/Action/Row/AccessibilityChecker/*"
 
-  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\PrintInvoiceAccessibilityChecker: ~
-  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\PrintDeliverySlipAccessibilityChecker: ~
-  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteOrderReturnStatesAccessibilityChecker: ~
-  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteOrderStatesAccessibilityChecker: ~
-  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\ProductSingleShopAssociatedAccessibilityChecker: ~
-  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\ProductMultipleShopsAssociatedAccessibilityChecker: ~
+  # @todo: couldn't find usages of this service. Probably ProfileGridDefinition is missing it in delete actions.
+  PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteProfileAccessibilityChecker:
+    arguments:
+      $superAdminProfileId: '@=service("prestashop.adapter.legacy.configuration").get("_PS_ADMIN_PROFILE_")'
 
   # deprecated services
   prestashop.core.grid.action.row.accessibility_checker.print_invoice:
@@ -37,3 +31,7 @@ services:
     alias: PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteOrderReturnStatesAccessibilityChecker
     public: true
     deprecated: ~
+
+  prestashop.core.grid.action.row.accessibility_checker.delete_profile:
+    alias: PrestaShop\PrestaShop\Core\Grid\Action\Row\AccessibilityChecker\DeleteProfileAccessibilityChecker
+    public: true
