--- a/src/PrestaShopBundle/Resources/config/services/adapter/alias.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/alias.yml
@@ -3,28 +3,20 @@ services:
     autowire: true
     public: false
 
-  PrestaShop\PrestaShop\Adapter\Alias\Validate\AliasValidator:
-    autowire: true
-    public: false
+  PrestaShop\PrestaShop\Adapter\Alias\Validate\AliasValidator: ~
 
   PrestaShop\PrestaShop\Adapter\Alias\Repository\AliasRepository:
-    autowire: true
-    public: false
     arguments:
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
       - '@PrestaShop\PrestaShop\Adapter\Alias\Validate\AliasValidator'
 
   PrestaShop\PrestaShop\Adapter\Alias\CommandHandler\AddAliasHandler:
-    autowire: true
-    public: false
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Alias\Command\AddAliasCommand
 
   PrestaShop\PrestaShop\Adapter\Alias\QueryHandler\GetAliasForEditingHandler:
-    autowire: true
-    public: false
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Alias\Query\GetAliasForEditing
