Make default router not Symfony based, and decorate the original router.
Signed-off-by: Fabien Papet <fabien.papet@gmail.com>

--- a/src/PrestaShopBundle/Resources/config/services/bundle/bridge/_list.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/bridge/_list.yml
@@ -4,8 +4,7 @@ services:
 
   prestashop.bridge.helper.listing.helper_list_configuration_factory:
     class: PrestaShopBundle\Bridge\Helper\Listing\HelperListConfigurationFactory
-    arguments:
-      - '@prestashop.router'
+    autowire: true
 
   prestashop.bridge.helper.listing.filters_processor:
     class: PrestaShopBundle\Bridge\Helper\Listing\FiltersProcessor
