Deprecate old router
Signed-off-by: Fabien Papet <fabien.papet@gmail.com>

--- a/src/PrestaShopBundle/Resources/config/services/bundle/services.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/services.yml
@@ -81,6 +81,7 @@ services:
     arguments: [ '@security.token_storage' ]
 
   prestashop.router:
+    deprecated: ~ # Since 9.0
     class: PrestaShopBundle\Service\Routing\Router
     parent: 'router.default'
     public: true
