Fix missing AdminSecurity

--- a/src/PrestaShopBundle/Resources/config/routing/admin/configure/advanced_parameters/shops.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/configure/advanced_parameters/shops.yml
@@ -3,5 +3,6 @@ admin_shops_search:
   methods: [ GET ]
   defaults:
     _controller: 'PrestaShopBundle\Controller\Admin\Configure\AdvancedParameters\ShopController::searchAction'
+    _legacy_controller: AdminAdvancedParameters
   options:
     expose: true
