--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/products/features.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/products/features.yml
@@ -4,6 +4,7 @@ admin_feature_get_feature_values:
   defaults:
     idFeature: 0
     _controller: PrestaShopBundle\Controller\Admin\FeatureController::getFeatureValuesAction
+    _legacy_controller: AdminFeatures
   requirements:
     idFeature: \d+
   options:
